--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@
     <h2>hello git 2</h2>
     <h2>hello git 2</h2>
     <h2>hello git 2</h2>
-    <h2>hello git 2</h2>
     <h1>Hello git 2</h1>
-    <h2>hello git 2</h2>
-    <h2>hello git 2</h2>
-    <h2>hello git 2</h2>
-    <h2>hello git 2</h2>
-    <h2>hello git 2</h2>
-    <h2>hello git 2</h2>
-    <h2>hello git 2</h2>
-    <h2>hello git 2</h2>
+    <h1>Hello git 2</h1>
 
 
 </body> 
